--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "pasdt",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "kingtable": "RobertoPrevato/KingTable"
+    "cookie-parser": "~1.4.4",
+    "csv-parser": "^2.3.0",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "fs": "^0.0.1-security",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1",
+    "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "express-generator": "^4.16.1",
+    "nodemon": "^1.19.1"
   }
 }
