--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "node ./node_modules/nodemon/bin/nodemon.js ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
