--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "Buttons": "https://github.com/DataTables/Buttons.git",
         "bootstrap-slider": "^10.6.2",
         "d3": "^5.12.0",
         "d3-3": "^0.0.0",
