--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "datatables.net-scroller-bs4": "^2.0.0",
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
+        "plotly.js-dist": "^1.49.4",
         "webpack-jquery-ui": "^2.0.1"
     }
 }
