--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "Buttons": "https://github.com/DataTables/Buttons.git",
         "bootstrap-slider": "^10.6.2",
         "chart.js": "^2.8.0",
+        "csvtojson": "^2.0.10",
         "d3": "^5.12.0",
         "d3-3": "^0.0.0",
         "datatables.net": "^1.10.19",
@@ -44,6 +45,7 @@
         "datatables.net-rowgroup-bs4": "^1.1.0",
         "datatables.net-scroller-bs4": "^2.0.0",
         "event-drops": "^1.3.0",
+        "global": "^4.4.0",
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
         "plotly.js-dist": "^1.49.5",
