--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "datatables.net-rowgroup-bs4": "^1.1.0",
         "datatables.net-scroller-bs4": "^2.0.0",
         "event-drops": "^1.3.0",
+        "flat": "^5.0.0",
         "global": "^4.4.0",
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
