--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "event-drops": "^1.3.0",
         "flat": "^5.0.0",
         "global": "^4.4.0",
+        "js-cookie": "^2.2.1",
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
         "plotly.js-dist": "^1.49.5",
