--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     },
     "dependencies": {
         "Buttons": "https://github.com/DataTables/Buttons.git",
+        "babel-loader": "^8.0.6",
         "bootstrap-slider": "^10.6.2",
         "chart.js": "^2.8.0",
+        "core-js": "3",
         "csvtojson": "^2.0.10",
         "d3": "^5.12.0",
         "d3-3": "^0.0.0",
