--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/resources/js/app.js": "/resources/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/checkout.js": "/js/checkout.js",
-    "/js/manifest.js": "/js/manifest.js",
-    "/js/vendor.js": "/js/vendor.js"
+    "/resources/js/manifest.js": "/resources/js/manifest.js",
+    "/resources/js/vendor.js": "/resources/js/vendor.js"
 }
