--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/resources/js/app.js": "/resources/js/app.js",
     "/css/app.css": "/css/app.css",
     "/resources/js/manifest.js": "/resources/js/manifest.js",
-    "/resources/js/vendor.js": "/resources/js/vendor.js"
+    "/resources/js/vendor.js": "/resources/js/vendor.js",
+    "/js/app.es5.js": "/js/app.es5.js"
 }
