--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/cashier": "^10.5",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.0"
+        "laravel/ui": "^1.0",
+        "pusher/pusher-php-server": "~4.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
