--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "3.4.1",
         "laravel-mix": "^4.0.7",
         "laravel-mix-bundle-analyzer": "^1.0.2",
         "lodash": "^4.17.13",
@@ -33,7 +33,8 @@
         "babel-loader": "^8.0.6",
         "bootstrap-select": "^1.13.12",
         "bootstrap-slider": "^10.6.2",
-        "chart.js": "^2.8.0",
+        "chart.js": "^2.9.3",
+        "chartjs-plugin-streaming": "^1.8.0",
         "core-js": "3",
         "csvtojson": "^2.0.10",
         "d3": "^5.12.0",
