--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
-        "cross-env": "^7.0.2",
-        "jquery": "3.4.1",
-        "laravel-mix": "^5.0.4",
+        "cross-env": "^5.1",
+        "jquery": "^3.2",
+        "laravel-mix": "^4.0.7",
         "laravel-mix-bundle-analyzer": "^1.0.2",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "resolve-url-loader": "3.1.1",
+        "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
-        "sass-loader": "8.0.2",
+        "sass-loader": "7.*",
         "vue-template-compiler": "^2.6.11",
         "webpack-bundle-analyzer": "^3.6.0",
         "webpack-cli": "^3.3.10"
@@ -33,14 +33,13 @@
         "babel-loader": "^8.0.6",
         "bootstrap-select": "^1.13.12",
         "bootstrap-slider": "^10.6.2",
-        "chart.js": "^2.9.3",
+        "chart.js": "^2.8.0",
         "chartjs-plugin-streaming": "^1.8.0",
         "core-js": "3",
         "csvtojson": "^2.0.10",
         "d3": "^5.12.0",
         "d3-3": "^0.0.0",
-        "datatables.net": "^1.10.20",
-        "datatables.net-bs": "^1.10.20",
+        "datatables.net": "^1.10.19",
         "datatables.net-bs4": "^1.10.19",
         "datatables.net-buttons-bs4": "^1.5.6",
         "datatables.net-colreorder-bs4": "^1.5.1",
@@ -53,7 +52,6 @@
         "event-drops": "^1.3.0",
         "flat": "^5.0.0",
         "global": "^4.4.0",
-        "imports-loader": "https://github.com/webpack/imports-loader",
         "js-cookie": "^2.2.1",
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
