--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "datatables.net-scroller-bs4": "^2.0.0",
         "event-drops": "^1.3.0",
         "flat": "^5.0.0",
+        "flatpickr": "^4.6.3",
         "global": "^4.4.0",
         "js-cookie": "^2.2.1",
         "jszip": "^3.2.2",
