--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,14 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+API_TOKEN=
+
+CASHIER_CURRENCY=eur
+CASHIER_LOGGER=default
+CASHIER_CURRENCY_LOCALE=fr_FR
+CASHIER_LOGGER=default
+STRIPE_KEY=
+STRIPE_SECRET=
+
 TELIT_USERNAME=
 TELIT_PASSWORD=
-TELIT_SESSION_ID_PATH=telit_session_id.txt
