--- a/.env.example
+++ b/.env.example
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
+MAIL_HOST=ssl0.ovh.net
+MAIL_PORT=465
+MAIL_USERNAME=pasdt.cfmhta.com
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=ssl
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -55,3 +55,4 @@ STRIPE_SECRET=
 TELIT_USERNAME=
 TELIT_PASSWORD=
 TELIT_SESSION_ID_PATH=telit_session_id.txt
+
