--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,20 @@
         "php": "^7.3",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
-        "laravel/cashier": "^10.5",
-        "laravel/framework": "^7.0",
+        "laravel/cashier": "^12.0",
+        "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/ui": "^3.0",
         "pusher/pusher-php-server": "~4.0",
-        "syamsoul/laravel-datatable-ssp": "^2.3"
+        "syamsoul/laravel-datatable-ssp": "^2.3",
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
