--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
         "datatables.net-buttons-bs4": "^1.5.6",
         "datatables.net-colreorder-bs4": "^1.5.1",
         "datatables.net-dt": "^1.10.19",
-        "datatables.net-fixedheader-bs4": "^3.1.5",
+        "datatables.net-fixedheader-bs4": "^3.1.7",
         "datatables.net-keytable-bs4": "^2.5.0",
+        "datatables.net-responsive": "^2.2.6",
         "datatables.net-responsive-bs4": "^2.2.3",
         "datatables.net-rowgroup-bs4": "^1.1.0",
         "datatables.net-scroller-bs4": "^2.0.0",
