graph js non reconnu ?

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "babel-plugin-transform-amd-to-commonjs": "^1.4.0",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
@@ -19,6 +20,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "laravel-mix-bundle-analyzer": "^1.0.2",
+        "laravel-mix-polyfill": "^2.0.0",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "2.3.1",
