--- a/public/.htaccess
+++ b/public/.htaccess
@@ -12,10 +12,15 @@
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [R=301]
+    RewriteRule ^ %1 [L,R=301]
 
-    # force https:// for all except some selected URLs
+    # Handle Front Controller...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^ / [L]
+
     RewriteCond %{HTTPS} off
     RewriteCond %{THE_REQUEST} !/api/log [NC]
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,NE,QSA]
+    RewriteRule ^ https://%{HTTP_HOST}$1 [L,R=301,NE,QSA]
+
 </IfModule>
