--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+SESSION_LIFETIME=43200
+SESSION_SECURE_COOKIE=false
 API_TOKEN=
 
 CASHIER_CURRENCY=eur
