alertes_custom ok

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "babel-loader": "^8.0.6",
         "bootstrap-select": "^1.13.12",
         "bootstrap-slider": "^10.6.2",
+        "bootstrap4-toggle": "^3.6.1",
         "chart.js": "^2.8.0",
         "chartjs-plugin-streaming": "^1.8.0",
         "core-js": "3",
