--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "jszip": "^3.2.2",
         "pdfmake": "^0.1.59",
         "plotly.js-dist": "^1.49.5",
+        "quill": "^1.3.7",
         "url-search-params-polyfill": "^8.1.0",
         "webpack-jquery-ui": "^2.0.1"
     }
