--- a/package.json
+++ b/package.json
@@ -2,38 +2,37 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "analysis": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js --profile --json > stats.json",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "analysis": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js --profile --json > stats.json",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.21",
         "babel-plugin-transform-amd-to-commonjs": "^1.4.0",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "laravel-mix-bundle-analyzer": "^1.0.2",
+        "laravel-mix": "^6.0.10",
+        "laravel-mix-bundle-analyzer": "^1.0.5",
         "laravel-mix-polyfill": "^2.0.0",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "2.3.1",
+        "popper.js": "^1.16",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue-template-compiler": "^2.6.11",
-        "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-cli": "^3.3.10"
+        "webpack-bundle-analyzer": "^4.3.0",
+        "webpack-cli": "^4.3.1"
     },
     "dependencies": {
-        "Buttons": "https://github.com/DataTables/Buttons.git",
         "anychart-jquery": "^1.0.5",
-        "babel-loader": "^8.0.6",
+        "babel-loader": "^8.2.2",
         "bootstrap-select": "^1.13.12",
         "bootstrap-slider": "^10.6.2",
         "bootstrap4-toggle": "^3.6.1",
@@ -45,6 +44,7 @@
         "d3-3": "^0.0.0",
         "datatables.net": "^1.10.19",
         "datatables.net-bs4": "^1.10.19",
+        "datatables.net-buttons": "^1.6.5",
         "datatables.net-buttons-bs4": "^1.5.6",
         "datatables.net-colreorder-bs4": "^1.5.1",
         "datatables.net-dt": "^1.10.19",
@@ -60,8 +60,9 @@
         "global": "^4.4.0",
         "js-cookie": "^2.2.1",
         "jszip": "^3.2.2",
-        "pdfmake": "^0.1.59",
+        "pdfmake": "^0.1.69",
         "plotly.js-dist": "^1.49.5",
+        "postcss": "^8.2.4",
         "quill": "^1.3.7",
         "url-search-params-polyfill": "^8.1.0",
         "webpack-jquery-ui": "^2.0.1"
