--- a/package.json
+++ b/package.json
@@ -40,8 +40,6 @@
         "chartjs-plugin-streaming": "^1.8.0",
         "core-js": "3",
         "csvtojson": "^2.0.10",
-        "d3": "^5.12.0",
-        "d3-3": "^0.0.0",
         "datatables.net": "^1.10.19",
         "datatables.net-bs4": "^1.10.19",
         "datatables.net-buttons": "^1.6.5",
@@ -64,6 +62,7 @@
         "plotly.js-dist": "^1.49.5",
         "postcss": "^8.2.4",
         "quill": "^1.3.7",
+        "shufflejs": "Vestride/Shuffle",
         "url-search-params-polyfill": "^8.1.0",
         "webpack-jquery-ui": "^2.0.1"
     }
