--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "bootstrap4-toggle": "^3.6.1",
         "chart.js": "^2.8.0",
         "chartjs-plugin-streaming": "^1.8.0",
-        "core-js": "3",
+        "core-js": "^3",
         "csvtojson": "^2.0.10",
         "datatables.net": "^1.10.19",
         "datatables.net-bs4": "^1.10.19",
@@ -54,7 +54,7 @@
         "datatables.net-scroller-bs4": "^2.0.0",
         "event-drops": "^1.3.0",
         "flat": "^5.0.0",
-        "flatpickr": "^4.6.3",
+        "flatpickr": "^4.6.9",
         "global": "^4.4.0",
         "js-cookie": "^2.2.1",
         "jszip": "^3.2.2",
