--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "plotly.js-dist": "^1.49.5",
         "postcss": "^8.2.4",
         "quill": "^1.3.7",
-        "shufflejs": "Vestride/Shuffle",
+        "shufflejs": "^6.1.0",
         "url-search-params-polyfill": "^8.1.0",
         "webpack-jquery-ui": "^2.0.1"
     }
